--- a/app/assets/stylesheets/process.scss
+++ b/app/assets/stylesheets/process.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the process controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.progress {
+  background-color: black;
+  border-radius: 9px;
+  padding: 3px;
+}
+
+.progress > .progress-bar {
+  background-color: lightgreen;
+  width: 0%;
+  height: 20px;
+  border-radius: 8px;
+}
